# Multimodal-CNS-Tumor-Diagnosis

./: .gitignore  .gitmodules  README.md  activate.sh  deactivate.sh  pyproject.toml
.agents/rules/: python-environment-setup.md
artifacts/: Paper_Vs_Code_Analysis.md
artifacts/network-design/: baseline_multitask_analysis.md  developer_guide.md
configs/: base.yaml  sweep.yaml  vision_only.yaml
configs/experiments/: baseline_cnn_vit.yaml  baseline_slice_wise.yaml  baseline_swin3d.yaml  brats_os_multitask.yaml  brats_os_vision_only.yaml
notebook/: explore-cohorts.ipynb
scripts/: diagnose_pipeline.py  eval.py  infer.py  run_sweep.py  train.py
src/avlt/data/: __init__.py  brats.py  brats_multitask.py  dataset.py  transforms.py
src/avlt/models/: __init__.py  avlt.py  avlt_multitask.py  avlt_vision_only.py  layers.py
src/avlt/models/encoders/: __init__.py  no_pool.py  original.py  original_fixed.py  slice_wise.py  swin3d.py  swin3d_multitask.py  swin_umamba.py  text_encoder.py
src/avlt/train/: cross_validation.py  distillation.py  engine.py  engine_vision_only.py  losses.py  losses_vision_only.py
src/avlt/utils/: loggers.py
tests/: test_losses.py
