[project]
name = "multimodal-cns-tumor-diagnosis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "hydra-core>=1.3",
    "wandb>=0.16",
]

[tool.uv.extra-build-dependencies]
causal-conv1d = ["torch"]

[tool.uv.workspace]
members = [
    "lib/Swin-UMamba/swin_umamba",
]
